@@ -13,6 +13,9 @@ that is called by both pcre2_match() and pcre2_dfa_match().
 
 3. Add idempotent guard to pcre2_internal.h.
 
+4. Add new pcre2_config() options: PCRE2_CONFIG_NEVER_BACKSLASH_C and
+PCRE2_CONFIG_COMPILED_WIDTHS.
+
 
 Version 10.30 14-August-2017
 ----------------------------
